<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingLeft="40.0dp"
    android:paddingRight="40.0dp">

    <EditText
        android:id="@+id/edit_regist_name"
        android:layout_width="match_parent"
        android:layout_height="50.0dp"
        android:layout_marginTop="40.0dp"
        android:background="@drawable/bg_editview_normal"
        android:hint="@string/name_hint" />

    <EditText
        android:id="@+id/edit_regist_password"
        android:layout_width="match_parent"
        android:layout_height="40.0dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_regist_name"
        android:layout_marginTop="18dp"
        android:background="@drawable/bg_editview_normal"
        android:hint="@string/regist_password_hint" />

    <EditText
        android:id="@+id/edit_regist_code"
        android:layout_width="match_parent"
        android:layout_height="40.0dp"
        android:layout_below="@id/edit_regist_password"
        android:layout_marginTop="20.0dp"
        android:background="@drawable/bg_editview_normal"
        android:hint="@string/code_hint" />

    <Button
        android:id="@+id/btn_getcode"
        android:layout_width="80.0dp"
        android:layout_height="40.0dp"
        android:layout_alignBottom="@id/edit_regist_code"
        android:layout_alignRight="@id/edit_regist_code"
        android:background="@null"
        android:text="@string/get_code"
        android:textColor="@color/colorPrimary"
        android:textSize="15.0sp" />

    <Button
        android:id="@+id/btn_regist"
        android:layout_width="match_parent"
        android:layout_height="40.0dp"
        android:layout_below="@id/edit_regist_code"
        android:layout_marginTop="10.0dp"
        android:background="@drawable/bg_button_normal"
        android:gravity="center"
        android:text="@string/regist"
        android:textSize="20.0sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_regist"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30.0dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreement"
            android:textSize="12.0sp" />

        <CheckBox
            android:id="@+id/cb_agree"
            android:layout_width="20.0dp"
            android:layout_height="20.0dp"
            android:background="@drawable/checkbox_style"
            android:button="@null" />
    </LinearLayout>
</RelativeLayout>