<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingLeft="40.0dp"
    android:paddingRight="40.0dp">

    <EditText
        android:id="@+id/edit_login_name"
        android:layout_width="match_parent"
        android:layout_height="40.0dp"
        android:layout_marginTop="40.0dp"
        android:background="@drawable/bg_editview_normal"
        android:hint="@string/name_hint" />

    <EditText
        android:id="@+id/edit_login_password"
        android:layout_width="match_parent"
        android:layout_height="40.0dp"
        android:layout_below="@id/edit_login_name"
        android:layout_marginTop="20.0dp"
        android:background="@drawable/bg_editview_normal"
        android:hint="@string/password_hint" />

    <TextView
        android:id="@+id/tv_forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/edit_login_password"
        android:layout_marginTop="5.0dp"
        android:background="@null"
        android:text="@string/forget_password"
        android:textColor="@color/colorPrimary"
        android:textSize="15.0sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40.0dp"
        android:layout_below="@id/tv_forgetpassword"
        android:layout_marginTop="10.0dp"
        android:background="@drawable/bg_button_normal"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="20.0sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40.0dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10.0dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0.0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/img_login_weibo"
                android:layout_width="40.0dp"
                android:layout_height="40.0dp"
                android:src="@mipmap/ic_launcher" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0.0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/img_login_qq"
                android:layout_width="40.0dp"
                android:layout_height="40.0dp"
                android:src="@mipmap/ic_launcher" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0.0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/img_login_weixin"
                android:layout_width="40.0dp"
                android:layout_height="40.0dp"
                android:src="@mipmap/ic_launcher" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>